<resources>
    <string name="app_name">Hermes</string>
    <string name="app_boldname">Hermes</string>
    <string name="bwlogo_txt">EH Black White Logo</string>
    <string name="wblogo_txt">EH White Black Logo</string>
    <string name="loader_text">LOADING&#8230;</string>
    <string name="title_subtext">Virtual Travel Guide</string>
    <string name="form_title_subtext">Meet Your</string>
    <string name="form_title_subtextb">Digital Travel Assistant</string>
    <string name="form_lower_text">Learn more about any</string>
    <string name="form_lower_textb">destination</string>
    <string name="form_lower_textc">Wherever you need, Hermes got your feed</string>
    <string name="SIGNIN">SIGN IN</string>
    <string name="SIGNINB">Sign In</string>
    <string name="GREETING1">Good Morning</string>
    <string name="GREETING2">Good Afternoon</string>
    <string name="GREETING3">Good Evening</string>
    <string name="GREETING4">Carpe Noctem</string>
    <string name="ShowcaseURL">Read More</string>
    <string name="IntroSlogan">What you need?</string>
    <string name="AbodeTitle">Abode</string>
    <string name="AbodeText">Find your perfect night stay before takeoff</string>
    <string name="FoodTitle">Food</string>
    <string name="FoodText">Discover tasty local bites ahead of your arrival</string>
    <string name="EntertainmentTitle">Entertainment</string>
    <string name="EntertainmentText">Get word on upcoming or ongoing local events</string>
    <string name="EdificationTitle">Edification</string>
    <string name="EdificationText">Find the best places to ideate during your trip</string>
    <string name="PopularSpotsTitle">Popular Spots</string>
    <string name="PopularSpotsText">See the trending spots before you touchdown</string>
    <string name="POITitle">Places of Interest</string>
    <string name="POIText">Get highlights on any notable places of interest</string>
    <string name="EHCopyright">©2019 EMPIAUR HOUSE</string>
    <string name="OR">or</string>
    <string name="facebook_app_id">522491604928164</string>
    <string name="fb_login_protocol_scheme">fb522491604928164</string>
    <string name="name_placeholder">Full Name</string>
    <string name="phone_placeholder">Phone Number</string>
    <string name="email_placeholder">Email Address</string>
    <string name="signin_help">Trouble signing in?</string>
    <string name="socialnetwork_buttongroup">VIA SOCIAL NETWORK</string>
    <string name="contact_formgroup">VIA CONTACT CARD</string>
    <string name="google_signin_text">Continue with Google</string>
    <string name="Hello">Hello</string>
    <string name="FullName">Full Name</string>
    <string name="SearchText">SEARCH AND DISCOVER YOUR NEXT DESTINATION</string>
    <string name="DBSearchText">PLEASE ENTER YOUR DESTINATION</string>
    <string name="search_hint">Where to?</string>
    <string name="VoiceEnabled">VOICE ENABLED</string>
    <string name="VTCText">A VIRTUAL TRAVEL GUIDE</string>
    <string name="VTCTextB">A Virtual Travel Cicerone</string>
    <string name="HermesLine1">My Pseudonym is Hermes</string>
    <string name="HermesLine2A">Where would you like to go?</string>
    <string name="HermesLine2B">Where we going to next?</string>
    <string name="HermesLine2C">Whats our heading Captain?</string>
    <string name="HermesLine2D">Where we off to next?</string>
    <string name="LoadingText">LOADING&#8230;</string>
    <string name="ResultsFetchText">FETCHING RESULTS&#8230;</string>
    <string name="DestinationQueryTextPH">City Name</string>
    <string name="test_interstitial_ad_unit_id">ca-app-pub-3940256099942544/8691691433</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-1184437456390972/7825110783</string>
    <string name="localtime_label">Locale Time: 12:00PM</string>
    <string name="localcurrency_label">Local Currency: Euro (€)</string>
    <string name="localweather_label">Current Weather: - 1°C</string>
    <string name="localcountrycode_label">ITU Country Code: +39</string>
    <string name="locationdistance_label">Distance from Current Location</string>
    <string name="divider">|</string>
    <string name="petasos_speechsim">Take a look at what I found</string>
    <string name="places_text">Places to Stay</string>
    <string name="eatplaces_text">Places to Eat</string>
    <string name="chillplaces_text">Places to Chill</string>
    <string name="populartplaces_text">Places that are Popular</string>
    <string name="interestplaces_text">Places of Interest</string>
    <string name="more_btn">More</string>
    <string name="sample_title">Transcorp Hilton</string>
    <string name="NQText">Would you like to query a new destination?</string>
    <string name="synopsis">ABOUT</string>
    <string name="contact_information">CONTACT INFORMATION</string>
    <string name="email_ph">email@domain.com</string>
    <string name="telephone_ph">+1(905)515&#8211;0515</string>
    <string name="website_ph">www.domain.com</string>
    <string name="synopsis_text">Hermes is a simple destination information demo application built for the Android mobile operating system to proffer end-users with supposedly relevant locale data like Local Time, Weather, Currency, ITU Country Code and other trivial traveller insights.</string>
    <string name="googlesignin_loading">Authenticating&#8230;</string>
    <string name="time_ph">Local Time:\u00A0</string>
    <string name="currency_ph">Local Currency:\u00A0</string>
    <string name="climate_ph">Climate:\u00A0</string>
    <string name="itu_ph">ITU Country Code:\u00A0</string>
    <string name="error_ph">No Results Found</string>
    <string name="error_ph2">Sorry, try another destination</string>
    <string name="JSONloader_text">Loading JSON&#8230;</string>


</resources>
