<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iot.empiaurhouse.hermes.SignInActivity"
    android:id="@+id/signin_activity"
    android:focusableInTouchMode="true"
    android:orientation="vertical">



    <TextView

        android:id="@+id/SignInTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:paddingStart="12dp"
        android:paddingEnd="0dp"
        android:paddingTop="1dp"
        android:paddingBottom="5dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="6dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/thasadithregular"
        android:text="@string/SIGNINB"
        android:textColor="@color/white"
        android:textSize="29sp"
        android:visibility="visible"

        />



    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/thasadithregular"
        android:text="@string/socialnetwork_buttongroup"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:visibility="visible"
        android:layout_marginTop="1dp"
        android:onClick="SIGNINHELP_BTN"
        />



    <com.facebook.login.widget.LoginButton
        android:background="@drawable/buttonborderwhite"
        android:id="@+id/fblogin_button"
        android:paddingTop="13dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="13dp"
        android:layout_width="320dp"
        android:textSize="17sp"
        android:fontFamily="@font/thasadithregular"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp" />

    <Button
        android:textAllCaps="false"
        android:onClick="GOOGLE_SIGNIN_BTN"
        android:layout_marginTop="-13dp"
        android:padding="2dp"
        android:background="@drawable/buttonborderthin"
        android:id="@+id/googlesignin_button"
        android:text="@string/google_signin_text"
        android:drawableLeft="@drawable/ic_greyfingerprint"
        android:textColor="@color/viewborder"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:textSize="17sp"
        android:fontFamily="@font/productsansbold"
        android:layout_height="wrap_content" />

    <com.google.android.gms.common.SignInButton
        android:visibility="gone"
        android:fontFamily="@font/thasadithregular"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/sign_in_button"
        android:layout_width="320dp"
        android:layout_marginTop="-13dp"
        android:layout_marginBottom="0dp"
        android:layout_height="wrap_content" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/thasadithregular"
        android:text="@string/OR"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:visibility="invisible"
        android:layout_marginTop="26dp"
    />


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_gravity="center"
        android:background="@color/viewborder"/>



    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/thasadithregular"
        android:text="@string/contact_formgroup"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:visibility="visible"
        android:layout_marginTop="6dp"

        />



    <EditText
        android:layout_marginTop="5dp"
        android:id="@+id/SignIn_Fullname"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="3"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/thasadithregular"
        android:hint="@string/name_placeholder"
        android:inputType="textPersonName"
        android:maxLength="13"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp" />



    <EditText
        android:id="@+id/SignIn_Email"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="3"
        android:textSize="26sp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/thasadithregular"
        android:hint="@string/email_placeholder"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="15dp"
        />


    <Button
        android:id="@+id/signin_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="21dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/montserratsemibold"
        android:onClick="DISCOVER_BTN"
        android:padding="2dp"
        android:text="@string/SIGNIN"
        android:textColor="@color/white"
        android:textSize="17sp" />


    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/thasadithregular"
        android:text="@string/signin_help"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:visibility="visible"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:onClick="SIGNINHELP_BTN"
        />



</LinearLayout>