
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="iot.empiaurhouse.hermes.Views.WelcomeActivity"
    android:id="@+id/welcome_activity"
    android:focusableInTouchMode="true"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/banner_container"
        android:layout_width="wrap_content"
        android:layout_height="419dp"
        android:layout_gravity="center"
        android:background="@drawable/hermesprimebckgrnd"

        >


        <TextView
            android:id="@+id/hello_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="145dp"
            android:fontFamily="@font/montserratregular"
            android:text="@string/Hello"
            android:textColor="@color/white"
            android:textSize="57sp"
            android:visibility="visible"

            />

        <TextView
            android:id="@+id/helloname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/thasadithregular"
            android:text="@string/FullName"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:visibility="visible"

            />


        <ImageView
            android:id="@+id/banner_img"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/hermes_minimallogo"
            android:contentDescription="@string/bwlogo_txt"
            android:visibility="visible" />


        <iot.empiaurhouse.hermes.Utils.TypeWriterTextView
            android:id="@+id/hermers_speech_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="139dp"
            android:fontFamily="@font/thasadithregular"
            android:text="@string/HermesLine1"
            android:textColor="@color/white"
            android:textSize="29sp"
            android:visibility="invisible"

            />


        <TextView
            android:id="@+id/hermes_speech_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="163dp"
            android:fontFamily="@font/thasadithbold"
            android:text="@string/VTCText"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:visibility="invisible"
            android:textAllCaps="true"

            />





    </FrameLayout>


    <TextView
        android:id="@+id/hermes_search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/thasadithbold"
        android:text="@string/DBSearchText"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:visibility="visible"

        />





    <View
        android:layout_marginTop="3dp"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_gravity="center"
        android:background="@color/viewborder"/>



    <SearchView
        android:visibility="visible"
        android:id="@+id/HermesSearch"
        android:background="@drawable/buttonborder"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorPrimary"
        android:queryHint="@string/search_hint"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:layout_width="320dp"
        android:layout_gravity="center"
        android:iconifiedByDefault="false"
        android:inputType="text"
        android:layout_height="wrap_content"/>

    <Spinner
        android:visibility="gone"
        android:layout_gravity="center"
        android:background="@drawable/buttonborder"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/HermesSearchList"

        />

    <View
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_gravity="center"
        android:background="@color/viewborder"/>




</LinearLayout>
